2004-07-06  Dan Winship  <danw@novell.com>

	* libsoup/soup-uri.c (soup_uri_new_with_base): if the protocol is
	http or https, require a hostname. For #61049

	* tests/uri-parsing.c (rel_tests, do_uri): Update for that

2004-06-03  JP Rosevear <jpr@novell.com>

	* configure.in: bump version to 2.1.11, libtool number

2004-06-01  Dan Winship  <danw@novell.com>

	* libsoup/soup-address.c: Redo the various IPv4/IPv6-abstracting
	macros to not use ?: expressions as lvalues, since that's
	apparently a GNU extension.
	(soup_address_resolve_async): Use a timeout rather than an idle
	handler to poll the dns result. (soup-dns really should be
	rewritten to not require polling, but this is easier for now.)
	#59240

	* libsoup/soup-server.c (call_handler): Don't use GNU-only
	non-constant structure initialization

	* tests/dns.c: Simple test of the dns code

	* tests/Makefile.am (noinst_PROGRAMS): build it

2004-05-19  JP Rosevear  <jpr@novell.com>

	* configure.in (SOUP_API_VERSION): bump version, libtool numbers

2004-05-18  Dan Winship  <danw@novell.com>

	* libsoup/soup-ssl.h:
	* libsoup/soup-nossl.c: define some GError codes and stuff

	* libsoup/soup-gnutls.c: add missing #include <gnutls/x509.h>
	(do_handshake): when returning G_IO_STATUS_AGAIN, set the GError
	to SOUP_SSL_ERROR_HANDSHAKE_NEEDS_READ or _NEEDS_WRITE
	appropriately.

	* libsoup/soup-socket.c (soup_socket_write): Handle
	SOUP_SSL_ERROR_HANDSHAKE_NEEDS_READ, by setting an io watch for
	G_IO_IN instead of G_IO_OUT. Fixes the rcd-sucking-up-all-cpu bug
	(#58434)
	(read_from_network): Handle the reverse case (which would cause
	hanging rather than spinning, and might be the cause of some
	connector 1.5 slowness?)

2004-05-11  Dan Winship  <danw@novell.com>

	* libsoup/soup-misc.c (soup_signal_connect_once): Do this less
	kludgefully, using the magic of GClosure, to fix x86_64 problems
	reported by snorp.

2004-05-04  Sivaiah Nallagatla <snallagatla@novell.com>
