@@ -1,6 +1,7 @@
 Makefile
 Makefile.in
 auth-test
+dict
 dns
 get
 revserver
